--- a/.github/workflows/buildozer.yml
+++ b/.github/workflows/buildozer.yml
@@ -32,5 +32,5 @@ jobs:
     - name: upload artifact
       uses: actions/upload-artifact@master
       with:
-        name: dist
-        path: dist
+        name: bin
+        path: bin
